--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -1,38 +1,31 @@
 <h1 class="title">Employees</h1>
 
 <table>
-    <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Phone Number</th>
-        <th>Salary</th>
-        <th></th>
-    </tr>
-    <tr>
-        <th>1</th>
-        <th>Karolina Martins</th>
-        <th>kcmartins@gmail.com</th>
-        <th>823 321 1235</th>
-        <th>45000.25</th>
-        <th><button>Delete</button></th>
-    </tr>
-    <tr>
-        <th>2</th>
-        <th>Jimmy McGill</th>
-        <th>jm23@yahoo.com</th>
-        <th>989 123 5555</th>
-        <th>100000.00</th>
-        <th><button>Delete</button></th>
-    </tr>
-    <tr>
-        <th>3</th>        
-        <th>Deborah Williams</th>
-        <th>dbw2@gmail.com</th>
-        <th>888 811 4241</th>
-        <th>14000.73</th>
-        <th><button>Delete</button></th>
-    </tr>
+
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone Number</th>
+            <th>Salary</th>
+            <th></th>
+        </tr>
+    </thead>
+
+    <tbody>
+        {{#each data}}
+        <tr>
+            <th>{{this.employee_id}}</th>
+            <th>{{this.employee_name}}</th>
+            <th>{{this.employee_email}}</th>
+            <th>{{this.employee_phone}}</th>
+            <th>{{this.salary}}</th>
+            <th><button>Delete</button></th>
+        </tr>
+        {{/each}}
+
+    </tbody>
 </table>
 
 <form id="addEmployee">
