--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: rgb(140, 219, 56);
+    background-color: rgb(0, 0, 0);
     overflow: hidden;
 } 
 
@@ -12,32 +12,32 @@
 }
 
 .navbar a:hover {
-    background-color: green;
+    background-color: rgb(106, 106, 106);
 }
 
 body {
-    background-color: rgb(194, 232, 183);
+    background-color: grey;
 }
 
 .site-title {
     font-size: 20px;
     height: 50px;
-    color: green;
+    color: rgb(9, 8, 8);
 }
 
 .title {
     font-size: 40px;
-    color: green;
+    color: rgb(0, 0, 0);
 }
 
 
 table, th, td {
-    border: 3px solid rgb(140, 217, 46);
+    border: 3px solid rgb(0, 0, 0);
     border-style: ridge;
 }
 
 th, td {
-    background-color: rgb(186, 229, 227);
+    background-color: rgb(127, 176, 176);
 }
 
 /*div:hover {
