--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,9 @@
+{{!-- Citation for index.handlebars --}}
+{{!-- Date: 12/05/2022 --}}
+{{!-- Adapted from Node JS Starter App--}}
+{{!-- https://github.com/osu-cs340-ecampus/nodejs-starter-app--}}
+
+
 <h1>Homepage</h1>
 
 <p>
