--- a/views/ordered_products.handlebars
+++ b/views/ordered_products.handlebars
@@ -1,19 +1,26 @@
+{{!-- Citation for ordered_products.handlebars --}}
+{{!-- Date: 12/05/2022 --}}
+{{!-- Adapted from Node JS Starter App--}}
+{{!-- https://github.com/osu-cs340-ecampus/nodejs-starter-app--}}
+
 
 <h1 class="title">Ordered Products</h1>
 
 <table id = "ordered_products_table">
     <thead>
+    {{!-- Display the columns --}}
 	<tr>
-		<th>ID</th>
-		<th>Order ID</th>
-		<th>Product ID</th>
-		<th>Product Name</th>
-		<th>Quantity</th>
-		<th>Cost</th>    
+	    <th>ID</th>
+	    <th>Order ID</th>
+	    <th>Product ID</th>
+       	    <th>Product Name</th>
+	    <th>Quantity</th>
+	    <th>Cost</th>    
 	</tr>
    </thead>
 
    <tbody>
+	{{!-- Print the relevant attributes for each row in order --}}
 	{{#each data}}
 	<tr>
 	    <td>{{this.ordered_product_id}}</td>
@@ -28,30 +35,26 @@
 
 </table>
 
-<div>
-    <h3>Instructions for adding to order_products table:</h3>
-    <p>All input fields must be filled, in order to successfully add an employee.</p>
-    <p>Quantity and Cost must be a number greater than or equal to 0.</p>
-</div>
-
-
+{{!-- Form to add an ordered product --}}
 <form id="addOrderedProd">
     <legend><h3>Add Ordered Product</h3></legend>
     <fieldset>
         <label>Product ID</label>
         <select name = "prodID" id="prodID">
+	    {{!-- Display product names for dropdown --}}
 	    {{#each prodInfo}}
             <option value = {{this.product_id}}>{{this.product_name}}</option>
 	    {{/each}}
         </select>
         <label>Order ID</label>
         <select name = "orderID" id="orderID">
+	    {{!-- Display order id's for dropdown --}}
 	    {{#each orderInfo}}
             <option value = "{{this.order_id}}">{{this.order_id}}</option>
 	    {{/each}}
         </select>
-        <label>Quantity</label> <input type="number" min="0" id="quantity" required>
-        <label>Cost</label> <input type="number"step="0.01" min="0" id="cost" required>
+        <label>Quantity</label> <input type="number" id="quantity">
+        <label>Cost</label> <input type="number" step="0.01" placeholder = "0.00" id="cost">
     </fieldset>
     <input type="submit" value="Add Ordered Product">
 </form>
