--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,3 +1,8 @@
+{{!-- Citation for 404.handlebars --}} 
+{{!-- Date: 12/05/2022 --}}
+{{!-- Adapted from Node JS Starter App--}}
+{{!-- https://github.com/osu-cs340-ecampus/nodejs-starter-app--}}
+
 <h2>404</h2>
 
-<h3>Woops!  We couldn't find that page.</h3>
+<h3>Whoops!  We couldn't find that page.</h3>
