--- a/views/customers.handlebars
+++ b/views/customers.handlebars
@@ -1,6 +1,11 @@
+{{!-- Citation for customers.handlebars file --}} 
+{{!-- Date: 12/05/2022 --}}
+{{!-- Adapted from Node JS Starter App--}}
+{{!-- https://github.com/osu-cs340-ecampus/nodejs-starter-app--}}
+
 <h1 class="title">Customers</h1>
 
-
+{{!-- Display the columns --}}
 <table id = "customers_table">
     <thead>
         <tr>
@@ -13,6 +18,7 @@
     </thead>
 
     <tbody>
+	{{!--Print the relevant attributes for each row in order --}}
         {{#each data}}
         <tr>
             <th>{{this.customer_id}}</th>
@@ -28,42 +34,16 @@
 
 </table>
 
-<div>
-    <h3>Instructions for adding customers:</h3>
-    <p>All input fields must be filled, in order to successfully add a customer.</p>
-    <p><strong>Phone number Format:</strong>123 456 7890</p>
-</div>
-
+{{!-- Form to add a customer --}}
 <form id="addCustomer">
     <legend><h3>Add Customer</h3></legend>
     <fieldset>
         <label>Name</label> <input  type="text" id = "cust_name">
         <label>Email</label> <input  type="text" id = "cust_email">
-        <label>Phone Number</label> <input type="text" id="cust_phone" pattern="[0-9]{3} [0-9]{3} [0-9]{4}" required>
+        <label>Phone Number</label> <input  type="text" id = "cust_phone">
         <label>Address</label> <input  type="text" id = "cust_address">
     </fieldset>
     <input type="submit" value="Add Customer">
 </form>
 
-{{!-- 
-<input type="button" value="Cancel">
-
-<form id="updateCustomer">
-    <legend><h3>Update Customer</h3></legend>
-    <fieldset>
-        <label>ID</label>
-        <select name = "id" id="custID">
-            <option value = "1">1</option>
-            <option value = "2">2</option>
-            <option value = "3">3</option>
-        </select>
-        <label>Name</label> <input  type="text">
-        <label>Email</label> <input  type="text">
-        <label>Phone Number</label> <input  type="text">
-        <label>Address</label> <input  type="text">
-    </fieldset>
-</form>
-
-<input type="submit" value="Update Customer">
-<input type="button" value="Cancel">  --}}
 <script src = "/js/customers.js"></script>
