--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,20 @@
+{{!-- Citation for main.handlebars --}}
+{{!-- Date: 12/05/2022 --}}
+{{!-- Adapted from Node JS Starter App--}}
+{{!-- https://github.com/osu-cs340-ecampus/nodejs-starter-app--}}
+
 <html>
     <head>
         <meta charset="utf-8">
         <title>Slimes Enviro</title>
         <link rel="stylesheet" href="/css/styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="site-title">
             <h1>Slimes Enviro</h1>
         </div>
+	{{!-- Navigation bar for different pages of the website --}}
         <div class="navbar">
             <a href="index">Home</a>
             <a href="customers">Customers</a>
@@ -19,8 +26,8 @@
             <a href="fungus_products">Fungus Products</a>  
         </div>
 
-
+	{{!-- Page content will go here --}}
         {{{body}}}
     </body>
 </html> 
- 
+
