--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,9 @@
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
 .navbar {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(13, 20, 83);
     overflow: hidden;
 } 
 
@@ -12,17 +16,20 @@
 }
 
 .navbar a:hover {
-    background-color: rgb(106, 106, 106);
+    background-color: rgb(32, 26, 106);
 }
 
 body {
-    background-color: grey;
+    background-color: rgb(158, 220, 165);
+    background-image: url(background.png);
+    background-size: 150px;
+
 }
 
-.site-title {
+.site-title  {
     font-size: 20px;
     height: 50px;
-    color: rgb(9, 8, 8);
+    color: rgb(6, 99, 11);
 }
 
 .title {
@@ -32,16 +39,32 @@ body {
 
 
 table, th, td {
-    border: 3px solid rgb(0, 0, 0);
-    border-style: ridge;
+    border: 4px solid rgb(13, 20, 83);
+    border-style: solid;
+    border-collapse: collapse;
+    font-size: large;
+
 }
 
 th, td {
-    background-color: rgb(127, 176, 176);
+    background-color: rgb(90, 164, 210);
+    padding: 4px;
+    
 }
 
-/*div:hover {
-    color: orange;
-    border-color: orange;
-    border-style: solid;
-}*/
+fieldset {
+    background-color: rgb(90, 164, 210);
+    border: 5px solid rgb(13, 20, 83);
+    font-size: large;
+    padding: 10px;
+    display: inline-block
+}
+
+h3 {
+    font-size: 25px;
+    display: inline-block
+}
+
+button {
+    padding: 3px;
+}
