--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,16 +3,26 @@
 {{!-- Adapted from Node JS Starter App--}}
 {{!-- https://github.com/osu-cs340-ecampus/nodejs-starter-app--}}
 
+<div class = "site-title">
+     <h1> Welcome to Slimes Enviro! </h1>
+</div>
 
-<h1>Homepage</h1>
+<div class = "index-text">
+    <p> Slimes Enviro, based in Corvallis, Oregon, is a midsize fungicide company that serves many large agricultural organizations throughout the Pacific Northwest, primarily in Oregon, Idaho, and Washington. </p>
+</div>
 
-<p>
-    <b>Customers:</b> View existing customers. <br>
-    <b>Employees:</b> View current employees. <br>
-    <b>Products:</b> View current products. <br>
-    <b>Orders:</b> Manage orders and assign them to certain customers and employees. <br>
-    <b>Ordered Products:</b> Display which products and how many of them go with each order. 
-       Serves as the M:M intersection table between Orders and Products. <br>
-    <b>Fungi:</b> View fungi. <br>
-    <b>Fungus Products:</b> Displays which products go with which fungi. Serves as the M:M intersection table between Fungi and Products.<br>
-</p>
+<div class = "site-title">
+     <h1> Database Overview: </h1>
+</div>
+
+<div class = "index-text">
+    <p>
+        <b>Customers:</b> View and add customers. <br>
+    	<b>Employees:</b> View and delete employees. <br>
+    	<b>Products:</b> View and add products. <br>
+    	<b>Orders:</b> View, add, update, and delete orders. <br>
+    	<b>Ordered Products:</b> View and add ordered products. Ordered products serves as the intersection table for orders and products. <br>
+    	<b>Fungi:</b> View and add fungi. <br>
+    	<b>Fungus Products:</b> View, add, and update fungus products. Fungus products serves as the intersection table for fungi and products.<br>
+    </p>
+</div>
