--- a/views/customers.handlebars
+++ b/views/customers.handlebars
@@ -33,6 +33,11 @@
  
 
 </table>
+<div>
+    <p>Instructions for adding customers:</p>
+    <p>All input fields must be filled in order to successfully add a customer.</p>
+    <p><strong>Phone number format: </strong>123 456 7890</p>
+</div>
 
 {{!-- Form to add a customer --}}
 <form id="addCustomer">
@@ -40,7 +45,7 @@
     <fieldset>
         <label>Name</label> <input  type="text" id = "cust_name">
         <label>Email</label> <input  type="text" id = "cust_email">
-        <label>Phone Number</label> <input  type="text" id = "cust_phone">
+        <label>Phone Number</label> <input  type="text" id = "cust_phone" pattern="[0-9]{3} [0-9]{3} [0-9]{4}" required>
         <label>Address</label> <input  type="text" id = "cust_address">
     </fieldset>
     <input type="submit" value="Add Customer">
