--- a/views/employees.handlebars
+++ b/views/employees.handlebars
@@ -35,14 +35,21 @@
     </tbody>
 </table>
 
+<div>
+    <p>Instructions for adding Employees:<p>
+    <p>All input fields must be filled in order to successfully add an employee.</p>
+    <p><strong>Phone number Format: </strong>123 456 7890</p>
+    <p>Salary must be a number greater than or equal to 0.</p>
+</div>
+
 {{!-- Form to add an employee --}}
 <form id="addEmployee">
     <legend><h3>Add Employee</h3></legend>
     <fieldset>
         <label>Name</label> <input  type="text" id = 'emp_name' >
         <label>Email</label> <input  type="text" id = 'emp_email'>
-        <label>Phone Number</label> <input  type="text" id = 'emp_phone' pattern="[0-9]{3} [0-9]{3} [0-9]{4}}">
-        <label>Salary</label> <input type="number" step="0.01" placeholder="0.00" id = 'emp_salary'>
+        <label>Phone Number</label> <input  type="text" id = 'emp_phone' pattern="[0-9]{3} [0-9]{3} [0-9]{4}}" required>
+        <label>Salary</label> <input type="number" min = "0" step="0.01" placeholder="0.00" id = 'emp_salary' required>
     </fieldset>
     <input type="submit" value="Add Employee">
 </form>
