--- a/views/orders.handlebars
+++ b/views/orders.handlebars
@@ -51,13 +51,20 @@
 	<a href='/orders'><button>Reset</button></a>
 </div>
 
+<div>
+    <p>Instructions for adding and updating orders:</h3>
+    <p>All input fields excecpt the date box must be filled in.</p>
+    <p><strong>NOTE:</strong> If the date box is not filled in, the value will be '0-0-00'.</p>
+    <p>Total Cost must be a number greater than or equal to 0.</p>
+</div>
+
 {{!-- Form to add an order --}}
 <form id="addOrder">
     <legend><h3>Add Order</h3></legend>
     <fieldset>
         <label>Date</label> <input type="date" id="date_input">
 
-        <label>Total Cost</label> <input type="number" step='0.01' placeholder='0.00' id = "cost_input">
+        <label>Total Cost</label> <input type="number" step='0.01' placeholder='0.00' min = "0" required id = "cost_input">
 
         <label>Employee ID</label>
         <select name = "id" id="empID">
@@ -91,7 +98,7 @@
 	     {{/each}}
         </select>
         <label>Date</label> <input type="date" id="updateOrderDate">
-        <label>Total Cost</label> <input type="number" step='0.01' placeholder='0.00' id = "updateOrderCost">
+        <label>Total Cost</label> <input type="number" step='0.01' placeholder='0.00' id = "updateOrderCost" min = "0" required>
         <label>Employee ID</label>
         <select name = "input-emp-id" id="updateEmpID">
  	    {{!-- Display employee names for dropdown --}}
