--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -29,12 +29,18 @@
     </tbody>
 </table>
 
+<div>
+    <p>Instructions for adding Products:<P>
+    <p>All inputs must be filled in.</p>
+    <p>Price must be a number greater than or equal to 0.</p>
+</div>
+
 {{!-- Form to add a product --}}
 <form id="addProduct">
     <legend><h3>Add Product</h3></legend>
     <fieldset>
         <label>Name</label> <input type="text" id="inputName">
-        <label>Price</label> <input type="text" step = "0.01" placeholder = "0.00" id="inputPrice">
+        <label>Price</label> <input type="number" step = "0.01" placeholder = "0.00" id="inputPrice" min = "0" required>
         <label>Main Ingredient</label> <input type="text" id="mainIng">
     </fieldset>
     <input type="submit" value="Add Product">
